[gd_scene format=3 uid="uid://bn86nsjl8plpi"]

[ext_resource type="Script" uid="uid://cxsycsojl48e5" path="res://Player/player.gd" id="1_4flbx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_onrkg"]
size = Vector3(0.7, 1.8, 0.7)

[sub_resource type="LabelSettings" id="LabelSettings_4flbx"]
font_size = 18
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_panel"]
bg_color = Color(0.06, 0.06, 0.09, 0.92)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.78, 0.86, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_button"]
bg_color = Color(0.14, 0.14, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.65, 0.74, 0.94, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_button_hover"]
bg_color = Color(0.2, 0.22, 0.3, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.85, 0.92, 1, 1)

[node name="Player" type="CharacterBody3D" unique_id=399912352 groups=["player"]]
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1936830890]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("BoxShape3D_onrkg")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=903531078]

[node name="Crosshair" type="CenterContainer" parent="CanvasLayer" unique_id=1930466523]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Crosshair" unique_id=70410427]
layout_mode = 2
text = "â€¢"
label_settings = SubResource("LabelSettings_4flbx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hotbar" type="HBoxContainer" parent="CanvasLayer" unique_id=176210341]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 260.0
offset_right = 120.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Slot0" type="Panel" parent="CanvasLayer/Hotbar" unique_id=18632852]
custom_minimum_size = Vector2(64, 36)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Hotbar/Slot0" unique_id=125211753]
layout_mode = 0
offset_right = 64.0
offset_bottom = 36.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot1" type="Panel" parent="CanvasLayer/Hotbar" unique_id=1800058292]
custom_minimum_size = Vector2(64, 36)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Hotbar/Slot1" unique_id=358489731]
layout_mode = 0
offset_right = 64.0
offset_bottom = 36.0
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="Panel" parent="CanvasLayer/Hotbar" unique_id=1960700952]
custom_minimum_size = Vector2(64, 36)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Hotbar/Slot2" unique_id=975822441]
layout_mode = 0
offset_right = 64.0
offset_bottom = 36.0
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Dimmer" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.52)

[node name="Center" type="CenterContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/PauseMenu/Center"]
custom_minimum_size = Vector2(360, 420)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pause_panel")

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/PauseMenu/Center/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 20.0
offset_right = -24.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="CanvasLayer/PauseMenu/Center/Panel/VBox"]
custom_minimum_size = Vector2(0, 76)
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/Center/Panel/VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_pause_button_hover")
text = "RESUME"

[node name="SettingsButton" type="Button" parent="CanvasLayer/PauseMenu/Center/Panel/VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_pause_button_hover")
text = "SETTINGS"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/PauseMenu/Center/Panel/VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_pause_button_hover")
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu/Center/Panel/VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_pause_button_hover")
text = "QUIT"

[node name="SettingsNotice" type="Label" parent="CanvasLayer/PauseMenu/Center/Panel/VBox"]
visible = false
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Settings panel placeholder (WIP)."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseNoticeTimer" type="Timer" parent="CanvasLayer"]
wait_time = 1.6
one_shot = true

[node name="PauseFadeOverlay" type="ColorRect" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Head" type="Node3D" parent="." unique_id=838375207]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head" unique_id=980803448]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, -0.55)
current = true

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D" unique_id=8781814]
target_position = Vector3(0, 0, -5)

[node name="Head Mesh (CSGBox3d)" type="CSGBox3D" parent="Head" unique_id=595450156]

[node name="Body" type="CSGBox3D" parent="." unique_id=1134171329]
transform = Transform3D(0.4, 0, 0, 0, 0.7, 0, 0, 0, 0.2, 0, 1.05, 0)

[node name="Right Arm" type="CSGBox3D" parent="." unique_id=1821972075]
transform = Transform3D(0.2, 0, 0, 0, 0.7, 0, 0, 0, 0.2, 0.3, 1.05, 0)

[node name="Left Arm" type="CSGBox3D" parent="." unique_id=781250372]
transform = Transform3D(0.2, 0, 0, 0, 0.7, 0, 0, 0, 0.2, -0.3, 1.05, 0)

[node name="Right Leg" type="CSGBox3D" parent="." unique_id=2021137898]
transform = Transform3D(0.2, 0, 0, 0, 0.7, 0, 0, 0, 0.2, 0.1, 0.35, 0)

[node name="Left Leg" type="CSGBox3D" parent="." unique_id=1783009752]
transform = Transform3D(0.2, 0, 0, 0, 0.7, 0, 0, 0, 0.2, -0.1, 0.35, 0)

[connection signal="pressed" from="CanvasLayer/PauseMenu/Center/Panel/VBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Center/Panel/VBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Center/Panel/VBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Center/Panel/VBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="CanvasLayer/PauseNoticeTimer" to="." method="_on_pause_notice_timer_timeout"]
